--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <header><title>This is title</title></header>
 <body>
-Hello world
+Hello world<br>
+This website is still pretty wip, but here is a better version, also pretty <a href="https://20fedora.pt/NewBiz/">wip </a>
 </body>
 </html>
