--- a/NewBiz/index.html
+++ b/NewBiz/index.html
@@ -95,7 +95,7 @@
         <div>
           <a href="#portfolio" class="btn-get-started scrollto">Request Print</a>
           <a href="#portfolio" class="btn-services scrollto">Galery</a>
-          <a href="#services" class="btn-services scrollto">How do we work?</a>
+          <a href="https://20fedora.pt/NewBiz/" class="btn-services scrollto">How do we work?</a>
         </div>
       </div>
 
@@ -124,25 +124,25 @@
 
             <div class="icon-box wow fadeInUp">
               <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-              <h4 class="title"><a href="">Create a brand</a></h4>
+              <h4 class="title">Create a brand</h4>
               <p class="description">A 20Fedora logo. Hopefully when people see it they will instantly recognize the brand.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
               <div class="icon"><i class="fa fa-photo"></i></div>
-              <h4 class="title"><a href="">Give don't sell</a></h4>
+              <h4 class="title">Give don't sell</h4>
               <p class="description">Sell prints? But where is the joy the love the magic in that? We are poor but there are poorer people that don't have a 3d printer.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
               <div class="icon"><i class="fa fa-bar-chart"></i></div>
-              <h4 class="title"><a href="">Something</a></h4>
+              <h4 class="title">Something</h4>
               <p class="description">Uh we will think of a 3rd point</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
               <div class="icon"><i class="fa fa-bar-chart"></i></div>
-              <h4 class="title"><a href="">Profit</a></h4>
+              <h4 class="title">Profit</h4>
               <p class="description">So we are spending electricity, filaments and website service and in return uuuuuuuuuuuuuhhhh. MAGIC. Why is our wallets desapearing? </p>
             </div>
 
@@ -347,37 +347,37 @@
       <div class="container">
 
         <header class="section-header">
-          <h3 class="section-title">Our Portfolio</h3>
+          <h3 class="section-title">Our Gallery</h3>
         </header>
 
         <div class="row">
           <div class="col-lg-12">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-dnd">D&D</li>
+              <li data-filter=".filter-anime">Anime</li>
+              <li data-filter=".filter-others">Others</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-dnd">
             <div class="portfolio-wrap">
               <img src="img/portfolio/app1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4><a href="#">App 1</a></h4>
                 <p>App</p>
                 <div>
-                  <a href="img/portfolio/app1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a href="img/portfolio/web3.jpg" data-lightbox="portfolio" data-title="web 3" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
                   <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-others" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/web3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -391,7 +391,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" data-wow-delay="0.2s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-dnd" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/app2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -405,7 +405,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-anime">
             <div class="portfolio-wrap">
               <img src="img/portfolio/card2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -419,7 +419,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-others" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/web2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -433,7 +433,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app" data-wow-delay="0.2s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-dnd" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/app3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -447,7 +447,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-anime">
             <div class="portfolio-wrap">
               <img src="img/portfolio/card1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -461,7 +461,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card" data-wow-delay="0.1s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-anime" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/card3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -475,7 +475,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web" data-wow-delay="0.2s">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-others" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <img src="img/portfolio/web1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -599,7 +599,7 @@
               <img src="img/team-2.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>A****a</h4>
+                  <h4>Angela</h4>
                   <span>Web Lord</span>
                   <div class="social">
                     <a href=""><i class="fa fa-twitter"></i></a>
@@ -699,7 +699,7 @@
 
           <div class="col-lg-6">
             <div class="map mb-4 mb-lg-0">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 312px;" allowfullscreen></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d797120.9776391047!2d-9.178067747424823!3d38.70049881482602!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2spt!4v1576603032959!5m2!1sen!2spt" frameborder="0" style="border:0; width: 100%; height: 312px;" allowfullscreen></iframe>
             </div>
           </div>
 
@@ -853,7 +853,7 @@
 	// Set the date we're counting down to
 	var particles = Particles.init({
 		selector: '.background',
-	  color: ['#DA0463', '#404B69', '#DBEDF3'],
+	  color: ['#f20f20', '#404B69', '#DBEDF3'],
 	  connectParticles: true
 	});
 	</script>
