--- a/emailtest.html
+++ b/emailtest.html
@@ -69,7 +69,7 @@
 
   <!-- Submit the Form to Google Using "AJAX" -->
   <script data-cfasync="false" src="form-submission-handler.js"></script>
-<!-- END -->
+<!-- ENDa -->
 
 </body>
 </html>
