--- a/NewBiz/index.html
+++ b/NewBiz/index.html
@@ -864,7 +864,7 @@
 					  <fieldset class="form-group">
 						<label for="details">Print details: </label>
 						<textarea class="form-control" id="details" name="details" rows="2"
-						placeholder="Tell us your story"></textarea>
+						placeholder="Details of your print like color, size etc..."></textarea>
 					  </fieldset>
 					  
 					  <fieldset class="form-group">
