--- a/NewBiz/index.html
+++ b/NewBiz/index.html
@@ -123,25 +123,25 @@
             </p>
 
             <div class="icon-box wow fadeInUp">
-              <div class="icon"><i class="fa fa-shopping-bag"></i></div>
+              <div class="icon"><i class="fa fa-graduation-cap"></i></div>
               <h4 class="title">Create a brand</h4>
               <p class="description">A 20Fedora logo. Hopefully when people see it they will instantly recognize the brand.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
-              <div class="icon"><i class="fa fa-photo"></i></div>
+              <div class="icon"><i class="fa fa-bar-chart"></i></div>
               <h4 class="title">Give don't sell</h4>
               <p class="description">Sell prints? But where is the joy the love the magic in that? We are poor but there are poorer people that don't have a 3d printer.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-              <div class="icon"><i class="fa fa-bar-chart"></i></div>
+              <div class="icon"><i class="fa fa-question"></i></div>
               <h4 class="title">Something</h4>
               <p class="description">Uh we will think of a 3rd point</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
-              <div class="icon"><i class="fa fa-bar-chart"></i></div>
+              <div class="icon"><i class="fa fa-line-chart"></i></div>
               <h4 class="title">Profit</h4>
               <p class="description">So we are spending electricity, filaments and website service and in return uuuuuuuuuuuuuhhhh. MAGIC. Why is our wallets desapearing? </p>
             </div>
@@ -208,54 +208,54 @@
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">1- Tell us your story</a></h4>
+              <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #f20f20;"></i></div>
+              <h4 class="title">1- Tell us your story</h4>
               <p class="description">Tell us a bit more about you before we offer you a print, if you are rich... why? If you are poor ok. If you are not a banana OMG TAKE ALL OF IT!</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">2- Ask politely</a></h4>
+              <div class="icon"><i class="ion-happy-outline" style="color: #f20f20;"></i></div>
+              <h4 class="title">2- Ask politely</h4>
               <p class="description">We all have consciouse and are easely psicologicaly hurt, if you say pwease ofc we will give you, if you say f*** you , well f*** you 2.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-paper-outline" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">3- Request details</a></h4>
+              <div class="icon"><i class="ion-ios-paper-outline" style="color: #f20f20;"></i></div>
+              <h4 class="title">3- Request details</h4>
               <p class="description">For us it is easier to know what exacly do you want like color, size, quality or other details. If you don't know well we don't know as well.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-speedometer-outline" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">4- Module link</a></h4>
+              <div class="icon"><i class="ion-cube" style="color:#f20f20;"></i></div>
+              <h4 class="title">4- Module link</h4>
               <p class="description">It is optional, but if you have the module link well then its way less work for us and you will receive the thing faster, if not, uhhh</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-5 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-world-outline" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">5- Wait</a></h4>
+              <div class="icon"><i class="ion-ios-clock-outline" style="color: #f20f20;"></i></div>
+              <h4 class="title">5- Wait</h4>
               <p class="description">Be patient, remember every one likes free stuff so there may be more in line, also if you live outside Portugal, oh... extra payment for us...</p>
             </div>
           </div>
 		  
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-clock-outline" style="color: #4680ff;"></i></div>
-              <h4 class="title"><a href="">6- Review</a></h4>
+              <div class="icon"><i class="ion-thumbsup" style="color: #f20f20;"></i></div>
+              <h4 class="title">6- Review</h4>
               <p class="description">Tell us what you think, what you liked and disliked or if there is something wrong etc... If it is bad we can make another one to compensate.</p>
             </div>
           </div>
 		  
           <div class="col-md-12 col-lg-10 offset-lg-1 wow bounceInUp" data-wow-delay="0.2s" data-wow-duration="1.4s">
             <div class="box">
-              <div class="icon"><i class="ion-ios-clock-outline" style="color: #4680ff;"></i></div>
-              <h4 class="title"><a href="">7- Share</a></h4>
+              <div class="icon"><i class="ion-ios-world-outline" style="color: #f20f20;"></i></div>
+              <h4 class="title">7- Share</h4>
               <p class="description">Share online, facebook or linkdin or others, friends, share a like, subscribe hit the bell icon, donate to our patreon, support our kickstarter, send us gifts, mbway all the way, share the coffee, share sum luv. This is all option you can not say anything after you receive the print and we will just be a lil extra sad, no worrys.</p>
             </div>
           </div>
