--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <title>20Fedora</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <meta content="" name="20 fedora 20fedora 3d print 3dprint prints fedora20">
+  <meta content="" name="20fedora is a 3d pritning 'company' that gives 3d prints for free... for now">
 
   <!-- Favicons -->
   <link href="ico.ico" rel="icon">
@@ -27,12 +27,6 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Theme Name: NewBiz
-    Theme URL: https://bootstrapmade.com/newbiz-bootstrap-business-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
   <style>
 	.img-fluid{
 		width:100%;
@@ -50,7 +44,6 @@
     <div class="container">
 
       <div class="logo float-left">
-        <!-- Uncomment below if you prefer to use an image logo -->
          <h1 class="text-light"><a href="#header"><span>20Fedora</span></a></h1> 
         <!--<a href="#intro" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -93,14 +86,14 @@
     <div class="container" style="position: inherit; z-index: 2;">
 	
       <div class="intro-img">
-        <img src="img/intro-img.svg" alt="" class="img-fluid">
+        <img src="img/intro-img.png" alt="" class="img-fluid">
       </div>
 
       <div class="intro-info">
         <h2>You want it?<br>We print it!</h2>
         <div>
           <a href="#" class="btn-get-started" data-toggle="modal" data-target="#request">Request Print</a>
-          <a href="#portfolio" class="btn-services scrollto">Galery</a>
+          <a href="#portfolio" class="btn-services scrollto">Gallery</a>
           <a href="#services" class="btn-services scrollto">How do we work?</a>
         </div>
       </div>
@@ -150,13 +143,13 @@
             <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
               <div class="icon"><i class="fa fa-line-chart"></i></div>
               <h4 class="title">Profit</h4>
-              <p class="description">So we are spending electricity, filaments and website service and in return uuuuuuuuuuuuuhhhh. MAGIC. Why is our wallets desapearing? </p>
+              <p class="description">So we are spending electricity, filaments and website service and in return uuuuuuuuuuuuuhhhh. MAGIC. Why is our wallets disappearing? </p>
             </div>
 
           </div>
 		<!-- Here lies our image -->
           <div class="col-lg-6 background order-lg-2 order-1 wow fadeInUp">
-            <img src="img/about-img.svg" class="img-fluid" alt="">
+            <img src="img/about-img.png" class="img-fluid" alt="">
           </div>
         </div>
 
@@ -172,7 +165,7 @@
         <header class="section-header">
           <h3>Services</h3>
           <p>People say that we are crazy and should start selling our prints, well here is what we say for those people... You are a banana!<br>
-		  You already know that we give prints away witout asking for money (if you didn't now you do) and here is how it works:</p>
+		  You already know that we give prints away without asking for money (if you didn't now you do) and here is how it works:</p>
         </header>
 
         <div class="row">
@@ -181,14 +174,14 @@
             <div class="box">
               <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #f20f20;"></i></div>
               <h4 class="title">1- Tell us your story</h4>
-              <p class="description">Tell us a bit more about your self before we offer you a print, if you are rich... why? If you are poor ok. If you are not a banana OMG TAKE ALL OF IT!</p>
+              <p class="description">Tell us a bit more about yourself before we offer you a print, if you are rich... why? If you are poor, ok. If you are not a banana OMG TAKE ALL OF IT!</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
             <div class="box">
               <div class="icon"><i class="ion-happy-outline" style="color: #f20f20;"></i></div>
               <h4 class="title">2- Ask politely</h4>
-              <p class="description">We all have consciouse and are easely psicologicaly hurt, if you say pwease ofc we will give you, if you say f*** you , well f*** you 2.</p>
+              <p class="description">We all have conscious and are easily psychologically hurt, if you say pwease ofc we will give you, if you say f*** you , well f*** you 2.</p>
             </div>
           </div>
 
@@ -196,7 +189,7 @@
             <div class="box">
               <div class="icon"><i class="ion-ios-paper-outline" style="color: #f20f20;"></i></div>
               <h4 class="title">3- Request details</h4>
-              <p class="description">For us it is easier to know what exacly do you want like color, size, quality or other details. If you don't know well we don't know as well.</p>
+              <p class="description">For us it is easier to know what exactly you want, like the color, size, quality or other details. If you don't know, well we don't know as well.</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
@@ -211,7 +204,7 @@
             <div class="box">
               <div class="icon"><i class="ion-ios-clock-outline" style="color: #f20f20;"></i></div>
               <h4 class="title">5- Wait</h4>
-              <p class="description">Be patient, remember every one likes free stuff so there may be more in line, also if you live outside Portugal, oh... extra payment for us...</p>
+              <p class="description">Be patient, remember everyone likes free stuff so there may be more in line, also if you live outside Portugal, oh... extra payment for us...</p>
             </div>
           </div>
 		  
@@ -227,7 +220,7 @@
             <div class="box">
               <div class="icon"><i class="ion-ios-world-outline" style="color: #f20f20;"></i></div>
               <h4 class="title">7- Share</h4>
-              <p class="description">Share online, facebook or linkdin or others, friends, share a like, subscribe hit the bell icon, donate to our patreon, support our kickstarter, send us gifts, mbway all the way, share the coffee, share sum luv. This is all option you can not say anything after you receive the print and we will just be a lil extra sad, no worrys.</p>
+              <p class="description">Share online, facebook or linkdin or others, friends, share a like, subscribe hit the bell icon, donate to our patreon, support our kickstarter, send us gifts, mbway all the way, share the coffee, share sum luv. This is all option you don't need say anything after you receive the print and we will just be a lil extra sad, no worries. *sniff*</p>
             </div>
           </div>
 
@@ -276,11 +269,39 @@
 
         <div class="row portfolio-container">
 
+          <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
+            <div class="portfolio-wrap">
+              <img src="28n.gif" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4><a target="_blank" href="https://www.youmagine.com/designs/dark-knight">Dark Knight</a></h4>
+                <p>Others</p>
+                <div>
+                  <a href="28n.gif" data-lightbox="portfolio" data-title="web 3" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a target="_blank"  href="#" class="link-details" title="Module Url"><i class="ion ion-android-open"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-dnd">
+            <div class="portfolio-wrap">
+              <img src="27n.gif" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4><a target="_blank" href="https://www.thingiverse.com/thing:1559735">Yeenoghu</a></h4>
+                <p>Others</p>
+                <div>
+                  <a href="27n.gif" data-lightbox="portfolio" data-title="web 3" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
+                  <a target="_blank"  href="#" class="link-details" title="Module Url"><i class="ion ion-android-open"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+		  
           <div class="col-6 col-lg-2 col-md-3 portfolio-item filter-others">
             <div class="portfolio-wrap">
               <img src="26n.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4><a target="_blank" href="#">20fedora</a></h4>
+                <h4><a target="_blank" href="#">20fedora WIP</a></h4>
                 <p>Others</p>
                 <div>
                   <a href="26n.gif" data-lightbox="portfolio" data-title="web 3" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
@@ -660,7 +681,7 @@
       <div class="container">
         <div class="section-header">
           <h3>Team</h3>
-          <p>As said before we are a humongous team of 2 </p>
+          <p>As said before we are a humongous team of 2. Along the way we may hire more and also maybe share more personal info. </p>
         </div>
 
         <div class="row">
@@ -673,8 +694,8 @@
                   <h4>Henrique</h4>
                   <span>Coffee Drinker</span>
                   <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
-                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <!--<a href=""><i class="fa fa-twitter"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>-->
                     <!-- find me <a href=""><i class="fa fa-linkedin"></i></a>-->
                   </div>
                 </div>
@@ -688,11 +709,11 @@
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Angela</h4>
-                  <span>Web Lord</span>
+                  <span>Web Lord</span><!--WEEB-->
                   <div class="social">
-                    <a href=""><i class="fa fa-twitter"></i></a>
+                    <!--<a href=""><i class="fa fa-twitter"></i></a>
                     <a href=""><i class="fa fa-facebook"></i></a>
-                    <a href=""><i class="fa fa-linkedin"></i></a>
+                    <a href=""><i class="fa fa-linkedin"></i></a>-->
                   </div>
                 </div>
               </div>
@@ -857,11 +878,11 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links that we normaly use</h4>
             <ul>
-              <li><a href="#">Thingverse</a></li>
-              <li><a href="#">Yetty</a></li>
-              <li><a href="https://www.goodreads.com/quotes/tag/motivation">GoodReads</a></li>
-              <li><a href="https://5e.tools">5etools</a></li>
-              <li><a href="#">Privacy policy</a></li>
+              <li><a target="_blank" href="https://www.tinkercad.com/">Tinkercad</a></li>
+              <li><a target="_blank" href="http://thingiverse.com/">Thingverse</a></li>
+              <li><a target="_blank" href="https://www.yeggi.com/">Yeggy</a></li>
+              <li><a target="_blank" href="https://www.goodreads.com/quotes/tag/motivation">GoodReads</a></li>
+              <li><a target="_blank" href="https://5e.tools">5etools</a></li>
             </ul>
           </div>
 
@@ -877,18 +898,20 @@
 
 
             <div class="social-links">
+			<!--
               <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
               <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
               <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
               <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
               <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+			  -->
             </div>
 
           </div>
 
           <div class="col-lg-3 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
-            <p>Hey! Did you know that some times improve something so big we love to share that something to everyone?! Me neither but here is the newsletter. Hopefully we will send once a month.</p>
+            <p>Hey! Did you know that sometimes improve something so big we love to share that something to everyone?! Me neither but here is the newsletter. Hopefully we will send once a month.</p>
 			<form class="gform pure-form pure-form-stacked" method="POST" data-email="true_admin@20fedora.pt"
 					action="https://script.google.com/macros/s/AKfycbw3V57QEsGWWSkkHfnSi9byBnpOK_W6Iy3P0Apa/exec">
               <input type="email" name="email"><input type="submit"  value="Subscribe">
