--- a/stlviewer/index.htm
+++ b/stlviewer/index.htm
@@ -21,5 +21,5 @@
     <h1>
         A Simple STL Viewer with Three.js
     </h1>
-    <div class=stlviewer data-src=hook.stl></div>
+    <div class=stlviewer data-src=body.stl></div>
 </body>
