--- a/stlviewer/index.htm
+++ b/stlviewer/index.htm
@@ -2,7 +2,10 @@
 
 <head>
     <style type="text/css">
-       div.stlviewer { height: 500px; }
+       div.stlviewer { 
+			height: 500px;
+			width:500px;
+		}
     </style>
     <script type=text/javascript> 
 	window.onload=function() {
