--- a/stlviewer/index.htm
+++ b/stlviewer/index.htm
@@ -16,6 +16,7 @@
     <script src="three.js/examples/js/WebGL.js"></script>
     <script src="three.js/examples/js/loaders/STLLoader.js"></script>
     <script src="three.js/examples/js/controls/OrbitControls.js"></script>
+	<script src="stl.js"></script>
     <script src="stlviewer.js"></script>
     <title>A Simple STL Viewer with Three.js</title>
 </head>
@@ -24,5 +25,8 @@
     <h1>
         A Simple STL Viewer with Three.js
     </h1>
+	<div>
+	select stl file: <input type="file" id="file" /> or drop stl file
+	</div>
     <div class=stlviewer data-src=body.stl></div>
 </body>
