--- a/stlviewer/index.htm
+++ b/stlviewer/index.htm
@@ -28,6 +28,6 @@
 	<div>
 	select stl file: <input type="file" id="file" /> or drop stl file
 	</div>
-    <div class=stlviewer data-src=body.stl></div>
+    <div id=stlviewer class=stlviewer data-src=body.stl></div>
 </body>
 <script src="stlviewer.js"></script>
