--- a/stlviewer/index.htm
+++ b/stlviewer/index.htm
@@ -3,9 +3,8 @@
 <head>
     <style type="text/css">
        div.stlviewer { 
-			height: 100%;
-			max-width:500px;
-			width:100%;
+			height: 500px;
+			width:500px;
 		}
     </style>
     <script type=text/javascript> 
