--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
     Intro Section
   ============================-->
   <section id="intro" class="clearfix">
-    <div class="container" style="position: inherit; z-index: 2;">
+    <div class="container">
 	<canvas class="backgrounds" style="position: absolute;top: 0;left: 0;pointer-events: none;"></canvas>
       <div class="intro-img" >
+		<img src="img/intro-img.svg" alt="" class="img-fluid" style="display:none;">
         <div style="display:none;">
 		select stl file: <input type="file" id="file" /> or drop stl file
 		</div>
