--- a/index.html
+++ b/index.html
@@ -31,11 +31,18 @@
 	.img-fluid{
 		width:100%;
 	}
-	#hovercolors{
-		display:none;
+	#hovercolors {
+		position: absolute;
+		width: 20px;
+		top: 200px;
+		right: 90px;
 	}
-	#hovercolors:hover{
-		display:inline;
+	#hovercolors:hover {
+		
+		display: block;
+		width: 132px;
+		top: 155px;
+		right: 35px;
 	}
 	
   </style>
