--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 		right: 90px;
 	}
 	#hovercolors:hover {
-		
 		display: block;
-		width: 132px;
-		top: 155px;
-		right: 35px;
+		zoom: 50%;
+		width: 236px;
+		top: 320px;
+		right: 80px;
 	}
 	
   </style>
