--- a/index.html
+++ b/index.html
@@ -846,8 +846,8 @@
             <div class="form">
               <div id="sendmessage">Your message has been sent. Thank you!</div>
               <div id="errormessage"></div>
-              <form class="gform pure-form pure-form-stacked" method="POST" data-email="bananalord@20fedora.pt"
-					action="https://script.google.com/macros/s/AKfycbw3V57QEsGWWSkkHfnSi9byBnpOK_W6Iy3P0Apa/exec">
+              <form class="gform pure-form pure-form-stacked" method="POST" data-email="contact@20fedora.pt"
+					action="https://script.google.com/macros/s/AKfycbwbvHDUyONzAgpTrSJ2FzmcHj_JsZ-9fz2-xA7UCoRpmuLMkM0/exec">
                 <div class="form-row">
                   <div class="form-group col-lg-6">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
@@ -928,8 +928,8 @@
           <div class="col-lg-3 col-md-6 footer-newsletter">
             <h4>Our Newsletter</h4>
             <p>Hey! Did you know that sometimes improve something so big we love to share that something to everyone?! Me neither but here is the newsletter. Hopefully we will send once a month.</p>
-			<form class="gform pure-form pure-form-stacked" method="POST" data-email="true_admin@20fedora.pt"
-					action="https://script.google.com/macros/s/AKfycbw3V57QEsGWWSkkHfnSi9byBnpOK_W6Iy3P0Apa/exec">
+			<form class="gform pure-form pure-form-stacked" method="POST" data-email="newsletter@20fedora.pt"
+					action="https://script.google.com/macros/s/AKfycbwbvHDUyONzAgpTrSJ2FzmcHj_JsZ-9fz2-xA7UCoRpmuLMkM0/exec">
               <input type="email" name="email"><input type="submit"  value="Subscribe">
             </form>
           </div>
@@ -965,8 +965,8 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				<form class="gform pure-form pure-form-stacked" method="POST" data-email="webangelasilva96@gmail.com"
-					action="https://script.google.com/macros/s/AKfycbw3V57QEsGWWSkkHfnSi9byBnpOK_W6Iy3P0Apa/exec">
+				<form class="gform pure-form pure-form-stacked" method="POST" data-email="request@20fedora.com"
+					action="https://script.google.com/macros/s/AKfycbwbvHDUyONzAgpTrSJ2FzmcHj_JsZ-9fz2-xA7UCoRpmuLMkM0/exec">
 				<!-- change the form action to your script url -->
 
 					<div class="form-elements">
@@ -1080,6 +1080,7 @@
 <script data-cfasync="false" src="form-submission-handler.js"></script>
 
   <!-- Template Main Javascript File -->
+	
 	
 
 </body>
