--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>20Fedora</title>
+  <title>20Fedoras</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="20 fedora 20fedora 3d print 3dprint prints fedora20">
   <meta content="" name="20fedora is a 3d pritning 'company' that gives 3d prints for free... for now">
@@ -1081,7 +1081,15 @@
 
   <!-- Template Main Javascript File -->
 	
-	
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-161646592-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-161646592-1');
+</script>	
 
 </body>
 </html>
